--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<header class="header">
+  <a class="hero-page menu-item"routerLink="/heroes">Heroes</a>
+  <a class="dashboard menu-item" routerLink="/dashboard">Dashboard</a>
+</header>
+<app-hero-form></app-hero-form>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
