--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,4 +7,6 @@
     <label for="hero-name">Name:</label>
     <input type="text" id="hero-name" [(ngModel)]="hero.name" placeholder="name">
   </div>
+  <button type="button" (click)="save()">Save</button>
+  <button type="button" (click)="goBack()">Go Back!</button>
 </div>
